--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,11 +1,26 @@
-TITLE=todos
-INPUT_PLACEHOLDER=What needs to be done?
-CLEAR_COMPLETED=Clear completed
-ACTIVE_ITEMS=Active items
-ACTIVE_ITEMS_CONTAINING=Active items containing "{0}"
-COMPLETED_ITEMS=Completed items
-COMPLETED_ITEMS_CONTAINING=Completed items containing "{0}"
-ITEMS_CONTAINING=Items containing "{0}"
-LABEL_ALL=All
-LABEL_ACTIVE=Active
-LABEL_COMPLETED=Completed
+# App Descriptor
+appTitle=Navigation & Routing Tutorial
+appDescription=A simple app that explains how to use navigation and routing features of SAPUI5
+
+iWantToNavigate=I want to navigate
+homePageTitle=Home
+
+NotFound=Not Found
+NotFound.description=Sorry, but the requested resource is not available. Please check the URL and try again.
+NotFound.backToHome=Back to Home
+
+DisplayNotFound=Display Not Found
+
+ShowEmployeeList=Show Employee List
+EmployeeList=Employee List
+ListOfAllEmployees=List of all employees
+
+EmployeeDetailsOf=Employee Details of
+EmployeeIDColon=Employee ID:
+formFirstName=First Name
+formLastName=Last Name
+formAddress=Address
+formCity=City
+formPostalCode=Postal Code
+formPhoneHome=Phone (Home)
+formCountry=Country
